# audio-gaussian-splatter

./: .gitignore  CMakeLists.txt
ags-app/: CMakeLists.txt
ags-app/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ags-manifold/: CMakeLists.txt
ags-manifold/include/ags/manifold/: GaussianManifold.h  GaussianSplat.h  ManifoldRotator.h
ags-manifold/include/ags/manifold/Generators/: DomeBranchingGenerator.h  GeneratorConfig.h  SphereBranchingGenerator.h
ags-manifold/src/: GaussianManifold.cpp  ManifoldRotator.cpp
ags-manifold/src/Generators/: DomeBranchingGenerator.cpp  SphereBranchingGenerator.cpp
ags-params/: CMakeLists.txt
ags-params/include/ags/params/: EffectParameter.h  GMMBinding.h  ParameterMapper.h  SplatOcclusion.h
ags-params/src/: EffectParameter.cpp  ParameterMapper.cpp
cmake/: FetchDependencies.cmake  FetchJUCE.cmake
spiral-dsp/: CMakeLists.txt
spiral-dsp/include/spiral/: SpiralAllpassSchroeder.h  SpiralBiquad.h  SpiralChorus.h  SpiralComb.h  SpiralCompressor.h  SpiralConvolutionReverb.h  SpiralDelay.h  SpiralDistortion.h  SpiralExpanderGate.h  SpiralFlanger.h  SpiralOnePoleLowPass.h  SpiralPhaseVocoder.h  SpiralRingMod.h  SpiralTremolo.h  SpiralVibrato.h  SpiralWahWah.h
tests/: CMakeLists.txt
tests/src/: EccentricityDistributionTest.cpp  EffectParameterTests.cpp  GeneratorTests.cpp  ManifoldRotatorTests.cpp  ParameterMapperTests.cpp  SplatOcclusionTests.cpp  TestRunner.cpp
tools/ManifoldPreview/: CMakeLists.txt  Main.cpp
